@@ -91,5 +91,6 @@ extern vmCvar_t g_panzerLevelUp;
 
 // pheno
 extern vmCvar_t g_mode;
+extern vmCvar_t g_unlockedWeapons;
 
 #endif
