@@ -401,10 +401,8 @@ weapon_t G_GetPrimaryWeaponForClient( gclient_t *client )
 
 	classInfo = &bg_allies_playerclasses[client->sess.playerType];
 
-	// pheno: mode - allies can pick up any weapon on the ground
-	if( g_mode.integer & MODE_ALLWEAPONS ) {
-		classInfo = &bg_allies_modeallweaponsclass;
-	}
+	// pheno: unlock weapons for allied team
+	BG_UnlockWeapons(classInfo, client->sess.playerType, client->sess.sessionTeam);
 
 	for( i = 0; i < MAX_WEAPS_PER_CLASS; i++) {
 		if( classInfo->classWeapons[i] == WP_MP40 || classInfo->classWeapons[i] == WP_THOMPSON )
@@ -417,10 +415,8 @@ weapon_t G_GetPrimaryWeaponForClient( gclient_t *client )
 
 	classInfo = &bg_axis_playerclasses[client->sess.playerType];
 
-	// pheno: mode - axis can pick up any weapon on the ground
-	if( g_mode.integer & MODE_ALLWEAPONS ) {
-		classInfo = &bg_axis_modeallweaponsclass;
-	}
+	// pheno: unlock weapons for axis team
+	BG_UnlockWeapons(classInfo, client->sess.playerType, client->sess.sessionTeam);
 
 	for( i = 0; i < MAX_WEAPS_PER_CLASS; i++) {
 		if( classInfo->classWeapons[i] == WP_MP40 || classInfo->classWeapons[i] == WP_THOMPSON )
